--- a/templates/home.html
+++ b/templates/home.html
@@ -3,12 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{{ url_for('static', filename='estilos/home.css') }}">
+    <link rel="icon" type="image/png" sizes="64x64"  href="{{ url_for('static', filename='imagens/logos/favicon.ico') }}">
+    <meta name="msapplication-TileColor" content="#000">
+    <meta name="theme-color" content="#000">
     <title>VibeScript - Home</title>
 </head>
 <body>
     <header>
         <div class="cabecalho-container">
-            <img src="#" alt="Logo">
+            <div class="logo-container">
+                <a href="#">
+                    <img class="logo" src="{{ url_for('static', filename='imagens/logos/logo1.png') }}" alt="Logo">
+                </a>
+            </div>
             <div class="cabecalho-btns">
                 <a class="lnk-planos" href="#">Planos</a>
                 <a class="lnk-login" href="#">Login</a>
@@ -19,77 +27,42 @@
     <main>
         <section class="apresentacao">
             <div class="apresentacao-container">
-                <div>
-                    <h2>Crie roteiros criativos para seus vídeos com a vibe do seu personagem.</>
-                    <div>
-                        <a class="lnk-login" href="#">Login</a>
-                        <a class="lnk-regis" href="#">Registrar-se</a>
+                <div class="apresentacao-infos">
+                    <h2>Crie roteiros criativos para seus vídeos com a vibe do seu personagem.</h2>
+                    <div class="links">
+                        <a class="lnk-login1" href="#">Login</a>
+                        <a class="lnk-regis1" href="#">Registrar-se</a>
                     </div>
                 </div>
                 <div>
-                    <img src="#" alt="personagem">
+                    <img src="{{ url_for('static', filename='imagens/personagens/personagem1.png') }}" alt="personagem">
                 </div>
             </div>
         </section>
         <section class="tutorial">
             <div class="tutorial-container">
-                <div>
-                    <h2>Saiba como criar seus roteiros?</h2>
+                <div class="passos-titulo">
+                    <h2>Saiba como criar seus roteiros</h2>
                     <p>é bem fácil, com esses três passos você poderá gerar seus roteiros.</p>
                 </div>
-                <div>
+                <div class="passos-container">
                     <div class="passo">
-                        <p>1</p>
+                        <div class="passo-n">
+                            <p>1</p>
+                        </div>
                         <p>escolha o plano que se encache melhor com as suas necessidades.</p>
                     </div>
                     <div class="passo">
-                        <p>2</p>
+                        <div class="passo-n">
+                            <p>2</p>
+                        </div>
                         <p>Crie seu personagem com a vibe que você preferir.</p>
                     </div>
                     <div class="passo">
-                        <p>3</p>
+                        <div class="passo-n">
+                            <p>3</p>
+                        </div>
                         <p>Pronto, agora você já pode gerar roteiros criativos a partir de um trema.</p>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <section class="planos">
-            <div class="planos-container">
-                <h2>Planos</h2>
-                <p>aproveite, promoção por tempo limitado!</p>
-                <div class="tipos-planos">
-                    <div class="plano">
-                        <h3>Plano Básico</h3>
-                        <p>de <span class="plano-antigo">R$10,00</span>/mês por <span class="plano-preco">R$00,00</span>/mês.</p>
-                        <a href="#">Assinar plano básico</a>
-                        <ul>
-                            <li>apenas um personagem</li>
-                            <li>apenas cinco roteiros por mês</li>
-                            <li>personagens editáveis</li>
-                            <li>escolher para qual plataforma o conteúdo será gerado</li>
-                        </ul>
-                    </div>
-                    <div class="plano">
-                        <h3>Plano padrão</h3>
-                        <p>de <span class="plano-antigo">R$25,00</span>/mês por <span class="plano-preco">R$15,00</span>/mês.</p>
-                        <a href="#">Assinar plano padrão</a>
-                        <ul>
-                            <li>até três personagens</li>
-                            <li>roteiros infinitos</li>
-                            <li>personagens editáveis</li>
-                            <li>escolher para qual plataforma o conteúdo será gerado</li>
-                        </ul>
-                    </div>
-                    <div class="plano">
-                        <h3>Plano profissional</h3>
-                        <p>de <span class="plano-antigo">R$35,00</span>/mês por <span class="plano-preco">R$25,00</span>/mês.</p>
-                        <a href="#">Assinar plano profissional</a>
-                        <ul>
-                            <li>até seis personagens</li>
-                            <li>roteiros infinitos</li>
-                            <li>personagens editáveis</li>
-                            <li>escolher para qual plataforma o conteúdo será gerado</li>
-                        </ul>
                     </div>
                 </div>
             </div>
@@ -98,26 +71,74 @@
             <div class="sobre-container">
                 <h2>Sobre</h2>
                 <div class="sobre-content">
-                    <img src="#" alt="personagem">
-                    <article>O VibeScript nasceu com o propósito de revolucionar a forma como criadores de conteúdo e profissionais de marketing produzem seus roteiros e ideias criativas. Através de uma combinação de inteligência artificial e personalização, oferecemos uma plataforma onde você pode criar personagens únicos, ajustar suas características e gerar roteiros ou descrições adaptadas de acordo com a vibe do seu personagem.</article>
+                    <img src="{{ url_for('static', filename='imagens/personagens/personagem2.png') }}" alt="personagem">
+                    <p>Nosso projeto nasceu com o propósito de revolucionar a forma como criadores de conteúdo e profissionais de marketing produzem seus roteiros e ideias criativas. Através de uma combinação de inteligência artificial e personalização, oferecemos uma plataforma onde você pode criar personagens únicos, ajustar suas características e gerar roteiros ou descrições adaptadas ao seu público-alvo e estilo.<br><br>
+                    Com diferentes planos de assinatura, nossa ferramenta é acessível para todos os tipos de usuários, desde quem está começando até profissionais que buscam otimizar sua produção de conteúdo para plataformas como YouTube, TikTok e Instagram. Além disso, oferecemos personagens pré-configurados e uma loja com opções personalizáveis, para que você tenha controle total sobre o conteúdo que cria.</p>
+                </div>
+            </div>
+        </section>
+        <section class="planos">
+            <div class="planos-container">
+                <div class="plano-titulo">
+                    <h2>Planos</h2>
+                    <p>aproveite, promoção por tempo limitado!</p>
+                </div>
+                <div class="tipos-planos">
+                    <div class="plano">
+                        <h3>Plano Básico</h3>
+                        <ul class="plano-beneficio">
+                            <li><span class="b-disponivel">✓</span> apenas um personagem</li>
+                            <li><span class="b-disponivel">✓</span> apenas cinco roteiros por mês</li>
+                            <li><span class="b-indisponivel">x</span> personagens editáveis</li>
+                            <li><span class="b-indisponivel">x</span> escolher para qual plataforma o conteúdo será gerado</li>
+                        </ul>
+                        <p>de <span class="preco-antigo">R$10,00/mês</span> por <span class="preco-novo">R$00,00/mês.</span></p>
+                        <a class="ass-plano" href="#">Assinar plano básico</a>
+                    </div>
+                    <div class="plano">
+                        <h3>Plano padrão</h3>
+                        <ul class="plano-beneficio">
+                            <li><span class="b-disponivel">✓</span> até três personagens</li>
+                            <li><span class="b-disponivel">✓</span> roteiros infinitos</li>
+                            <li><span class="b-indisponivel">x</span> personagens editáveis</li>
+                            <li><span class="b-indisponivel">x</span> escolher para qual plataforma o conteúdo será gerado</li>
+                        </ul>
+                        <p>de <span class="preco-antigo">R$25,00/mês</span> por <span class="preco-novo">R$15,00/mês.</span></p>
+                        <a class="ass-plano" href="#">Assinar plano padrão</a>
+                    </div>
+                    <div class="plano">
+                        <h3>Plano profissional</h3>
+                        <ul class="plano-beneficio">
+                            <li><span class="b-disponivel">✓</span> até seis personagens</li>
+                            <li><span class="b-disponivel">✓</span> roteiros infinitos</li>
+                            <li><span class="b-disponivel">✓</span> personagens editáveis</li>
+                            <li><span class="b-disponivel">✓</span> escolher para qual plataforma o conteúdo será gerado</li>
+                        </ul>
+                        <p>de <span class="preco-antigo">R$35,00/mês</span> por <span class="preco-novo">R$25,00/mês.</span></p>
+                        <a class="ass-plano" href="#">Assinar plano profissional</a>
+                    </div>
                 </div>
             </div>
         </section>
     </main>
     <footer>
         <div class="footer-container">
-            <img src="#" alt="logo">
-            <h4>Contato:</h4>
-            <p>vibescript@gmail.com</p>
-            <p>(61) 9 91234-5678</p>
+            <div class="logo2-container">
+                <img  src="{{ url_for('static', filename='imagens/logos/logo2.png') }}" alt="logo">
+            </div>
+            <div class="footer-content">
+                <h4>Contato:</h4>
+                <p>vibescript@gmail.com</p>
+                <p>(61) 9 91234-5678</p>
+            </div>
+            <div class="lnk-uteis">
+                <a href="#">Registrar-se</a>
+                <a href="#">login</a>
+                <a href="#">planos</a>
+                <a href="#">sobre</a>
+            </div>
         </div>
-        <div class="lnk-uteis">
-            <a href="#">Registrar-se</a>
-            <a href="#">login</a>
-            <a href="#">planos</a>
-            <a href="#">sobre</a>
-        </div>
-        <p>Site criado por <a href="#">Rafael Brandão</a></p>
+        <p class="creditos">Site criado por <a href="#">Rafael Brandão</a></p>
     </footer>
 </body>
 </html>
