--- a/static/estilos/home.css
+++ b/static/estilos/home.css
@@ -7,6 +7,11 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
+html {
+    scroll-behavior: smooth;
+    scroll-padding-top: 40px;
+}
+
 section {
     min-height: 80dvh;
 }
@@ -158,7 +163,8 @@ h2 {
 
 .passos-container {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
+    gap: 30px;
     flex-wrap: wrap;
 }
 
@@ -245,6 +251,7 @@ h2 {
     width: 100%;
     min-height: 80dvh;
     justify-content: space-evenly;
+    gap: 10px;
     align-items: center;
 }
 
@@ -254,10 +261,10 @@ h2 {
 
 .tipos-planos {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
+    gap: 30px;
     flex-wrap: wrap;
     width: 100%;
-    gap: 10px;
 }
 
 .plano {
@@ -273,22 +280,29 @@ h2 {
 }
 
 .plano > h3 {
-    font-size: 1.4em;
+    font-size: 1.1em;
     font-weight: 700;
     text-align: center;
 }
 
+.plano > p {
+    text-align: center;
+}
+
 .preco-antigo {
-    font-size: .8em;
+    font-size: .7em;
     color: var(--cinzaMédio);
     text-decoration: line-through;
 }
 
 .preco-novo {
-    font-size: 1.1em;
+    font-size: 1.7em ;
     font-weight: 600;
     color: #34de37;
-    text-decoration: underline;
+}
+
+.por {
+    font-size: 0.8em;
 }
 
 .plano-beneficio {
@@ -299,6 +313,7 @@ h2 {
 .b-disponivel, .b-indisponivel {
     font-size: 1.1em;
     font-weight: 600;
+    margin-right: 7px;
 }
 
 .b-disponivel {
@@ -307,6 +322,7 @@ h2 {
 
 .b-indisponivel {
     color: #dd3737;
+    margin-right: 10px;
 }
 
 .ass-plano {
