--- a/templates/home.html
+++ b/templates/home.html
@@ -18,9 +18,9 @@
                 </a>
             </div>
             <div class="cabecalho-btns">
-                <a class="lnk-planos" href="#">Planos</a>
-                <a class="lnk-login" href="#">Login</a>
-                <a class="lnk-regis" href="#">Registrar-se</a>
+                <a class="lnk-planos" href="#planos">Planos</a>
+                <a class="lnk-login" href="{{ url_for('login.formulario') }}">Login</a>
+                <a class="lnk-regis" href="{{ url_for('registrar.formulario') }}">Registrar-se</a>
             </div>
         </div>
     </header>
@@ -30,8 +30,8 @@
                 <div class="apresentacao-infos">
                     <h2>Crie roteiros criativos para seus vídeos com a vibe do seu personagem.</h2>
                     <div class="links">
-                        <a class="lnk-login1" href="#">Login</a>
-                        <a class="lnk-regis1" href="#">Registrar-se</a>
+                        <a class="lnk-login1" href="{{ url_for('login.formulario') }}">Login</a>
+                        <a class="lnk-regis1" href="{{ url_for('registrar.formulario') }}">Registrar-se</a>
                     </div>
                 </div>
                 <div>
@@ -77,7 +77,7 @@
                 </div>
             </div>
         </section>
-        <section class="planos">
+        <section class="planos" id="planos">
             <div class="planos-container">
                 <div class="plano-titulo">
                     <h2>Planos</h2>
@@ -86,35 +86,35 @@
                 <div class="tipos-planos">
                     <div class="plano">
                         <h3>Plano Básico</h3>
+                        <p><span class="por">de</span> <span class="preco-antigo">R$10,00/mês</span> <br> <span class="por">por</span> <span class="preco-novo">R$00,00/mês.</span></p>
                         <ul class="plano-beneficio">
                             <li><span class="b-disponivel">✓</span> apenas um personagem</li>
                             <li><span class="b-disponivel">✓</span> apenas cinco roteiros por mês</li>
                             <li><span class="b-indisponivel">x</span> personagens editáveis</li>
                             <li><span class="b-indisponivel">x</span> escolher para qual plataforma o conteúdo será gerado</li>
                         </ul>
-                        <p>de <span class="preco-antigo">R$10,00/mês</span> por <span class="preco-novo">R$00,00/mês.</span></p>
                         <a class="ass-plano" href="#">Assinar plano básico</a>
                     </div>
                     <div class="plano">
                         <h3>Plano padrão</h3>
+                        <p><span class="por">de</span> <span class="preco-antigo">R$25,00/mês</span> <br> <span class="por">por</span> <span class="preco-novo">R$15,00/mês.</span></p>
                         <ul class="plano-beneficio">
                             <li><span class="b-disponivel">✓</span> até três personagens</li>
                             <li><span class="b-disponivel">✓</span> roteiros infinitos</li>
                             <li><span class="b-indisponivel">x</span> personagens editáveis</li>
                             <li><span class="b-indisponivel">x</span> escolher para qual plataforma o conteúdo será gerado</li>
                         </ul>
-                        <p>de <span class="preco-antigo">R$25,00/mês</span> por <span class="preco-novo">R$15,00/mês.</span></p>
                         <a class="ass-plano" href="#">Assinar plano padrão</a>
                     </div>
                     <div class="plano">
                         <h3>Plano profissional</h3>
+                        <p><span class="por">de</span> <span class="preco-antigo">R$35,00/mês</span> <br> <span class="por">por</span> <span class="preco-novo">R$25,00/mês.</span></p>
                         <ul class="plano-beneficio">
                             <li><span class="b-disponivel">✓</span> até seis personagens</li>
                             <li><span class="b-disponivel">✓</span> roteiros infinitos</li>
                             <li><span class="b-disponivel">✓</span> personagens editáveis</li>
                             <li><span class="b-disponivel">✓</span> escolher para qual plataforma o conteúdo será gerado</li>
                         </ul>
-                        <p>de <span class="preco-antigo">R$35,00/mês</span> por <span class="preco-novo">R$25,00/mês.</span></p>
                         <a class="ass-plano" href="#">Assinar plano profissional</a>
                     </div>
                 </div>
@@ -138,7 +138,7 @@
                 <a href="#">sobre</a>
             </div>
         </div>
-        <p class="creditos">Site criado por <a href="#">Rafael Brandão</a></p>
+        <p class="creditos">desenvolvido por <a href="#">Rafael Brandão</a></p>
     </footer>
 </body>
 </html>
