--- a/templates/home.html
+++ b/templates/home.html
@@ -92,6 +92,8 @@
                             <li><span class="b-disponivel">✓</span> apenas cinco roteiros por mês</li>
                             <li><span class="b-indisponivel">x</span> personagens editáveis</li>
                             <li><span class="b-indisponivel">x</span> escolher para qual plataforma o conteúdo será gerado</li>
+                            <li><span class="b-indisponivel">x</span> acesso grátis aos personagens pré definidos da loja</li>
+
                         </ul>
                         <a class="ass-plano" href="#">Assinar plano básico</a>
                     </div>
@@ -103,6 +105,7 @@
                             <li><span class="b-disponivel">✓</span> roteiros infinitos</li>
                             <li><span class="b-indisponivel">x</span> personagens editáveis</li>
                             <li><span class="b-indisponivel">x</span> escolher para qual plataforma o conteúdo será gerado</li>
+                            <li><span class="b-indisponivel">x</span> acesso grátis aos personagens pré definidos da loja</li>
                         </ul>
                         <a class="ass-plano" href="#">Assinar plano padrão</a>
                     </div>
@@ -114,6 +117,7 @@
                             <li><span class="b-disponivel">✓</span> roteiros infinitos</li>
                             <li><span class="b-disponivel">✓</span> personagens editáveis</li>
                             <li><span class="b-disponivel">✓</span> escolher para qual plataforma o conteúdo será gerado</li>
+                            <li><span class="b-disponivel">✓</span> acesso grátis aos personagens pré definidos da loja</li>
                         </ul>
                         <a class="ass-plano" href="#">Assinar plano profissional</a>
                     </div>
