criei a plataforma onde vai aparecer as funcionalidades do sistema

--- a/login/templates/login.html
+++ b/login/templates/login.html
@@ -17,7 +17,7 @@
                 </div>
                 <div class="form">
                     <h3>Login</h3>
-                    <form action="">
+                    <form action="{{ url_for('login.loginValidar') }}" method="post">
                         <label for="email">e-mail</label>
                         <input type="email" name="email" placeholder="e-mail">
                         <label for="senha">senha</label>
