--- a/registrar/templates/registrar.html
+++ b/registrar/templates/registrar.html
@@ -13,13 +13,13 @@
             <div class="form-content">
                 <div class="form">
                     <h3>Registrar-se</h3>
-                    <form action="">
+                    <form action="regis_validar" method="post">
                         <label for="nome">nome</label>
                         <input type="text" name="nome" placeholder="seu nome">
                         <label for="email">e-mail</label>
                         <input type="email" name="email" placeholder="seu e-mail">
                         <label for="telefone">telefone</label>
-                        <input type="number" name="email" placeholder="seu telefone">
+                        <input type="number" name="telefone" placeholder="seu telefone">
                         <label for="senha">senha</label>
                         <input type="password" name="senha" placeholder="sua senha">
                         <label for="confirm-senha">confirmar senha</label>
