melhorando o sistema de cadastro e login de usuários

--- a/plataforma/templates/plataforma.html
+++ b/plataforma/templates/plataforma.html
@@ -52,7 +52,7 @@
                 </div>
             </div>
             <div class="explicacao">
-                <h2>Tenha acesso a personagens exclusivos na nossa loja</h2>
+                <h2>Olá {{ nome }}, pronto para gerar seus roteiros com o VibeScript?</h2>
                 <p>compre personagens pré definidos ou personagens em branco para personalizar da maneira que preferir.</p>
                 <a class="lnk-regis1" href="#">ACESSAR LOJA</a>
             </div>
