--- a/login/templates/login.html
+++ b/login/templates/login.html
@@ -22,6 +22,10 @@
                         <input type="email" name="email" placeholder="e-mail">
                         <label for="senha">senha</label>
                         <input type="password" name="senha" placeholder="Senha">
+                        {% set mensagem = get_flashed_messages() %}
+                        {% if mensagem %}
+                            <p class="erro">{{ mensagem[0] }}</p>
+                        {% endif %}
                         <input class="btn-submit" type="submit" value="Login">
                     </form>
                     <p class="lnk-registrar">não tem uma conta? <a href="{{ url_for('registrar.formulario') }}">registrar-se</a></p>
