--- a/plataforma/static/estilos/plataforma.css
+++ b/plataforma/static/estilos/plataforma.css
@@ -8,9 +8,11 @@
     max-width: 45dvw;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-evenly;
-    gap: 5px;
+    justify-content: center;
+    align-items: stretch;
+    align-content: stretch;
     text-align: center;
+    gap: 40px 60px;
 }
 
 .personagens > div {
@@ -21,7 +23,7 @@
 }
 
 .personagens > div > img {
-    width: 150px;
+    height: 150px;
 }
 
 .dica {
@@ -37,4 +39,8 @@
     justify-content: space-evenly;
     gap: 20px;
     align-items: center;
+}
+
+.chat-container {
+    padding-top: 100px;
 }
