--- a/plataforma/templates/chat.html
+++ b/plataforma/templates/chat.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../../static/estilos/home.css">
-    <link rel="stylesheet" href="../static/estilos/plataforma.css" >
+    <link rel="stylesheet" href="{{ url_for('static', filename='estilos/home.css') }}">
+    <link rel="stylesheet" href="{{ url_for('plataforma.static', filename='estilos/plataforma.css') }}" >
     <title>VibeScript - plataforma</title>
 </head>
 <body>
@@ -23,8 +23,8 @@
         </div>
     </header>
     <main>
-        <section>
-            
+        <section class="chat-container">
+            <h1>{{ id_personagem }}</h1>
         </section>
     </main>
 </body>
