--- a/plataforma/static/estilos/chat.css
+++ b/plataforma/static/estilos/chat.css
@@ -41,11 +41,12 @@ html {
     background-color: var(--brancoGelo);
     padding: 10px;
     box-shadow: 0px 0px 5px #5b5b5b86;
-
+    display: flex;
 }
 
 .persona-imagem-container > img {
-    width: 100%;
+    height: 100%;
+    margin: 0px auto;
 }
 
 .histórico-roteiros {
@@ -76,6 +77,12 @@ html {
     width: 75dvw;
     height: 100dvh;
     box-shadow: 0px 0px 5px #5b5b5b86 inset;
+}
+
+.apresentacao-chat {
+    overflow-y: auto;
+    max-height: 78dvh;
+    scrollbar-width: thin;
 }
 
 .apresentacao-chat-msg {
@@ -115,13 +122,9 @@ html {
     border-radius: 100px;
     border: none;
     box-shadow: 0px 0px 3px #5b5b5b86;
-    background-color: var(--verdeMenta);
+    background-color: var(--brancoGelo);
     color: var(--azulEscuro);
     cursor: pointer;
-}
-
-.input-submit:hover {
-    transform: scale(1.05);
 }
 
 .mensagens {
@@ -130,7 +133,6 @@ html {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    overflow-y: auto;
     scrollbar-width: thin;
 }
 
@@ -162,9 +164,10 @@ html {
     border-radius: 50%;
     padding: 3px;
     box-shadow: 0px 0px 3px #5b5b5b86;
-    
+    display: flex;
 }
 
 .mensagem-imagem > img {
-    width: 100%;
+    height: 100%;
+    margin: 0px auto;
 }
