melhorei o formato da resposta do gpt e implementei a confirmação de email na hora de criar a conta

--- a/plataforma/templates/chat.html
+++ b/plataforma/templates/chat.html
@@ -35,33 +35,22 @@
                 </div>
                 <div class="histórico-roteiros">
                     <div class="roteiro">
-                        <h3>como driblar</h3>
+                        <h3>histórico de chats</h3>
                         <p class="data-hora-roteiro"><span class="data-roteiro">20/02/20024</span> <span class="hora-roteiro">10:23</span></p>
                     </div>
-                    <div class="roteiro">
+                    <!-- <div class="roteiro">
                         <h3>melhore seeu futebol</h3>
                         <p class="data-hora-roteiro"><span class="data-roteiro">21/02/20024</span> <span class="hora-roteiro">11:30</span></p>
                     </div>
                     <div class="roteiro">
                         <h3>curiosidades sobre mim</h3>
                         <p class="data-hora-roteiro"><span class="data-roteiro">23/02/20024</span> <span class="hora-roteiro">09:40</span></p>
-                    </div>
+                    </div> -->
                 </div>
             </div>
             <div class="chat-content">
                 <div class="apresentacao-chat">
                     <h2 class="apresentacao-chat-msg">Que Bom te ver, {{nome_usuario}}, <br> Me Conte a Sua Ideia de Vídeo.</h2>
-                    <!-- <div class="mensagens">
-                        <div class="mensagem-usuario">
-                            <p>Crie um roteiro sobre futebol na escola.</p>
-                        </div>
-                        <div class="mensagem-resposta">
-                            <div class="mensagem-imagem">
-                                <img src="{{ url_for('plataforma.static', filename=dados_personagem['imagem']) }}" alt="Neymar">
-                            </div>
-                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Temporibus cupiditate nulla repudiandae accusantium quasi? Vitae aut maiores facilis impedit alias vel et quaerat. Nam fuga labore soluta laudantium, facilis ratione!</p>
-                        </div>
-                    </div> -->
                 </div>
                 <form class="input-chat">
                     <input class="input-ideia" type="text" name="ideia" placeholder="digite a sua ideia">
