--- a/plataforma/static/estilos/chat.css
+++ b/plataforma/static/estilos/chat.css
@@ -77,12 +77,16 @@ html {
     width: 75dvw;
     height: 100dvh;
     box-shadow: 0px 0px 5px #5b5b5b86 inset;
+    background-color: #e8eef4;
+
 }
 
 .apresentacao-chat {
     overflow-y: auto;
     max-height: 78dvh;
     scrollbar-width: thin;
+    /* background-color: #e8eef4; */
+    min-height: calc(100dvh - 135px);
 }
 
 .apresentacao-chat-msg {
@@ -138,7 +142,6 @@ html {
 
 .mensagem-usuario, .mensagem-resposta {
     padding: 10px;
-    border-radius: 20px;
     color: var(--azulEscuro);
     font-weight: 500;
     font-size: 1.2em;
@@ -146,15 +149,25 @@ html {
 }
 
 .mensagem-usuario {
-    background-color: #e8eef4;
+    background-color: #fff;
     max-width: 70%;
     align-self: flex-end;
+    border-radius: 20px 2px 20px 20px;
 }
 
 .mensagem-resposta {
-    background-color: var(--brancoGelo);
+    background-color: #fff;
     max-width: 70%;
     align-self: flex-start;
+    border-radius: 2px 20px 20px 20px;
+}
+
+.mensagem-resposta > article > h2 {
+    font-size: 1.4em;
+}
+
+.mensagem-resposta > article >  h3 {
+    font-size: 1.2em;
 }
 
 .mensagem-imagem {
