melhorei os chats e adicionei as personagens femininas.

--- a/plataforma/templates/chat.html
+++ b/plataforma/templates/chat.html
@@ -52,11 +52,11 @@
                 <div class="apresentacao-chat">
                     <h2 class="apresentacao-chat-msg">Que Bom te ver, {{nome_usuario}}, <br> Me Conte a Sua Ideia de Vídeo.</h2>
                 </div>
-                <form class="input-chat">
+                <div class="input-chat">
                     <input class="input-ideia" type="text" name="ideia" placeholder="digite a sua ideia">
                     <!-- <button type="submit" value=">"> -->
                     <button type="button" class="input-submit">></button>
-                </form>
+                </div>
                 </section>
     </main>
 
