--- a/plataforma/static/estilos/chat.css
+++ b/plataforma/static/estilos/chat.css
@@ -85,6 +85,7 @@ html {
     overflow-y: auto;
     max-height: 78dvh;
     scrollbar-width: thin;
+    scroll-behavior: smooth;
     /* background-color: #e8eef4; */
     min-height: calc(100dvh - 135px);
 }
@@ -178,6 +179,10 @@ html {
     padding: 3px;
     box-shadow: 0px 0px 3px #5b5b5b86;
     display: flex;
+}
+
+.carregando-resposta {
+    padding-top: 10px;
 }
 
 .mensagem-imagem > img {
