--- a/templates/home.html
+++ b/templates/home.html
@@ -86,20 +86,19 @@
                 <div class="tipos-planos">
                     <div class="plano">
                         <h3>Plano Básico</h3>
-                        <p><span class="por">de</span> <span class="preco-antigo">R$10,00/mês</span> <br> <span class="por">por</span> <span class="preco-novo">R$00,00/mês.</span></p>
+                        <p><span class="por">de</span> <span class="preco-antigo">R$2,99/mês</span> <br> <span class="por">por</span> <span class="preco-novo">R$00,00/mês.</span></p>
                         <ul class="plano-beneficio">
                             <li><span class="b-disponivel">✓</span> apenas um personagem</li>
                             <li><span class="b-disponivel">✓</span> apenas cinco roteiros por mês</li>
                             <li><span class="b-indisponivel">x</span> personagens editáveis</li>
                             <li><span class="b-indisponivel">x</span> escolher para qual plataforma o conteúdo será gerado</li>
                             <li><span class="b-indisponivel">x</span> acesso grátis aos personagens pré definidos da loja</li>
-
                         </ul>
-                        <a class="ass-plano" href="#">Assinar plano básico</a>
+                        <a class="ass-plano" href="{{ url_for('registrar.formulario') }}">Assinar plano básico</a>
                     </div>
                     <div class="plano">
                         <h3>Plano padrão</h3>
-                        <p><span class="por">de</span> <span class="preco-antigo">R$25,00/mês</span> <br> <span class="por">por</span> <span class="preco-novo">R$15,00/mês.</span></p>
+                        <p><span class="por">de</span> <span class="preco-antigo">R$8,99/mês</span> <br> <span class="por">por</span> <span class="preco-novo">R$6,99/mês.</span></p>
                         <ul class="plano-beneficio">
                             <li><span class="b-disponivel">✓</span> até três personagens</li>
                             <li><span class="b-disponivel">✓</span> roteiros infinitos</li>
@@ -107,11 +106,11 @@
                             <li><span class="b-indisponivel">x</span> escolher para qual plataforma o conteúdo será gerado</li>
                             <li><span class="b-indisponivel">x</span> acesso grátis aos personagens pré definidos da loja</li>
                         </ul>
-                        <a class="ass-plano" href="#">Assinar plano padrão</a>
+                        <a class="ass-plano" href="{{ url_for('registrar.formulario') }}">Assinar plano padrão</a>
                     </div>
                     <div class="plano">
                         <h3>Plano profissional</h3>
-                        <p><span class="por">de</span> <span class="preco-antigo">R$35,00/mês</span> <br> <span class="por">por</span> <span class="preco-novo">R$25,00/mês.</span></p>
+                        <p><span class="por">de</span> <span class="preco-antigo">R$14,99/mês</span> <br> <span class="por">por</span> <span class="preco-novo">R$9,99/mês.</span></p>
                         <ul class="plano-beneficio">
                             <li><span class="b-disponivel">✓</span> até seis personagens</li>
                             <li><span class="b-disponivel">✓</span> roteiros infinitos</li>
@@ -119,7 +118,7 @@
                             <li><span class="b-disponivel">✓</span> escolher para qual plataforma o conteúdo será gerado</li>
                             <li><span class="b-disponivel">✓</span> acesso grátis aos personagens pré definidos da loja</li>
                         </ul>
-                        <a class="ass-plano" href="#">Assinar plano profissional</a>
+                        <a class="ass-plano" href="{{ url_for('registrar.formulario') }}">Assinar plano profissional</a>
                     </div>
                 </div>
             </div>
