--- a/static/estilos/home.css
+++ b/static/estilos/home.css
@@ -276,7 +276,7 @@ h2 {
     box-shadow: 0px 0px 5px #00000035;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: space-between;
     gap: 10px;
 }
 
